# asok-auth-providers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
asok_auth_providers/: __init__.py  _icons.py  flow.py  providers.py
asok_auth_providers/pages/auth/[provider]/: callback.py  login.py
asok_auth_providers/static/css/: oauth-buttons.css  oauth-buttons.min.css
asok_auth_providers/templates/auth_providers/: buttons.html
tests/: conftest.py  test_providers.py
